--- a/public/css/style.css
+++ b/public/css/style.css
@@ -21797,9 +21797,13 @@ body.nightmode .table th {
   border-color: #3e3e3e;
 }
 
+.chordsheet {
+  overflow: scroll;
+}
+
 .chordsheet td.lyrics {
-  padding: 0;
-  white-space: pre;
+  line-height: 1.5;
+  white-space: nowrap;
 }
 
 .chordsheet td.chord {
@@ -21822,7 +21826,6 @@ body.nightmode .table th {
 
 #song {
   position: relative;
-  overflow: scroll;
 }
 
 #endOfChords {
